# libnetconf

./: CMakeLists.txt  configure.in
dev-tools/lnctool/: CMakeLists.txt
src/: CMakeLists.txt  internal.c  messages.c  notifications.c  tls.c
